// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

import "920-delegate-service-beans/src/main/proto/io/harness/delegate/schedule_task.proto";

service ScheduleTaskService {
  rpc InitTask(SetupExecutionInfrastructureRequest) returns (SetupExecutionInfrastructureResponse);
  rpc ExecuteTask(ScheduleTaskRequest) returns (ScheduleTaskResponse);
  rpc CleanupInfra(CleanupInfraRequest) returns (CleanupInfraResponse);
}
